--- a/templates/home.html
+++ b/templates/home.html
@@ -1,27 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}武侯担保{% endblock %}
-{% block extra-css %}
-    <style>
-        th {
-            text-align: center;
-        }
 
-        caption {
-            text-align: center;
-        }
-
-        .condition a {
-            display: inline-block;
-            padding: 5px 8px;
-            border: 1px solid #dddddd;
-        }
-
-        .condition a.active {
-            background-color: coral;
-            color: white;
-        }
-    </style>
-{% endblock %}
 {% block body %}
     <div class="container">
         <div>Hello {{ request.user.name }},
@@ -87,7 +66,7 @@
                         {#"table-condensed":表格紧缩#}
                         {#<caption><h4>项目管理</h4></caption>#}
                         <thead>
-                        <tr>
+                        <tr style="text-align: center">
                             <th>序号</th>
                             <th>项目编号</th>
                             <th>客户</th>
@@ -109,9 +88,9 @@
                                 <td>{{ article.custom }}</td>
                                 <td>{{ article.amount }}</td>
                                 <td>{{ article.credit_term }}</td>
-                                <td>{{ article.director }}</td>
-                                <td>{{ article.assistant }}</td>
-                                <td>{{ article.control }}</td>
+                                <td>{{ article.director.name }}</td>
+                                <td>{{ article.assistant.name }}</td>
+                                <td>{{ article.control.name }}</td>
                                 <td>{{ article.article_date }}</td>
                                 {#方式一：推荐#}
                                 <td>{{ article.get_article_state_display }}</td>
