--- a/A_dbms/templates/dbms/article/article-add.html
+++ b/A_dbms/templates/dbms/article/article-add.html
@@ -1,95 +1,36 @@
+{% extends 'dbms/index.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>添加项目</title>
-    <link rel="stylesheet"
-          href="{% static 'dbms/css/bootstrap.css' %}">
-    <link rel="stylesheet"
-          href="{% static 'dbms/css/style.css' %}">
-    <script
-            src="{% static 'dbms/js/jquery-3.3.1.js' %}">
-    </script>
-    <script
-            src="{% static 'dbms/js/bootstrap.min.js' %}">
-    </script>
-</head>
-<body>
-<div class="container">
-    <h2>添加项目</h2>
-    <form class="form-horizontal"
-          action="{% url 'dbms:article_add' user=user %}"
-          method="post">
-        {#"form-inline":内联表单#}
-        {#"form-horizontal":水平排列的表单#}
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                <div class="col-sm-10">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors.0 }}
-                    {% if field.help_text %}
-                        <div class="help">
-                            {{ field.help_text|safe }}
-                        </div>
-                    {% endif %}
-                </div>
-            </div>
-        {% endfor %}
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <input type="submit" class="btn btn-primary"
-                       value="提交"/>
-            </div>
-        </div>
-    </form>
+{% block title %}添加项目{% endblock %}
 
-
-    <form class="form-horizontal"
-          action="{% url 'dbms:article_add' user=user %}"
-          method="post">
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputEmail3"
-                       class="col-sm-2 control-label">Email
-                </label>
-                <div class="col-sm-10">
-                    <input type="email"
-                           class="form-control" id="inputEmail3"
-                           placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3"
-                       class="col-sm-2 control-label">Password
-                </label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control"
-                           id="inputPassword3"
-                           placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Remember me
-                        </label>
+{% block right-content-container %}
+    <div class="container">
+        <h2>添加项目</h2>
+        <form class="form-horizontal"
+              action="{% url 'dbms:article_add' usernum=request.user.num %}"
+              method="post"> {% csrf_token %}
+            {#"form-inline":内联表单#}
+            {#"form-horizontal":水平排列的表单#}
+            {% for field in form %}
+                <div class="form-group">
+                    <div class="col-sm-10">
+                        {{ field.label_tag }}
+                        {{ field }}
+                        {{ field.errors.0 }}
+                        {% if field.help_text %}
+                            <div class="help">
+                                {{ field.help_text|safe }}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
-            </div>
+            {% endfor %}
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit"
-                            class="btn btn-default">Sign in
+                            class="btn btn-default">提交
                     </button>
                 </div>
             </div>
         </form>
-    </form>
-
-</div>
-</body>
-</html>
+    </div>
+{% endblock %}
