--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     {#<link rel="icon" href="http://v3.bootcss.com/favicon.ico">#}
-    <title>{% block title %}PerfectCRM{% endblock %}</title>
+    <title>{% block title %}WHDB{% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
