--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    {% block pro_name %}Project name{% endblock %}
+                    {% block pro_name %}武侯中小-担保管理系统-首页{% endblock %}
                 </a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -21,7 +21,7 @@
                     <li class="dropdown ">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                            role="button">
-                            {{ request.user }} <span class="caret"></span>
+                            {{ request.user.name }} <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">个人信息</a></li>
