--- a/templates/login.html
+++ b/templates/login.html
@@ -8,15 +8,32 @@
 {% block body %}
     <div class="container">
         <form class="form-signin" method="post">{% csrf_token %}
-            <h2 class="form-signin-heading">Oldboy PerfectCRM</h2>
-            <label for="inputEmail" class="sr-only">Username</label>
-            <input type="text" id="" name="username"
-                   class="form-control" placeholder="Username"
-                   required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" name="password"
-                   class="form-control"
-                   placeholder="Password" required>
+            <h2 class="form-signin-heading">系统登录</h2>
+            <div class="form-group">
+                <label for="inputEmail" class="sr-only">Username</label>
+                <input type="text" id="inputEmail" name="username"
+                       class="form-control" placeholder="用户名"
+                       required autofocus>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" name="password"
+                       class="form-control"
+                       placeholder="密码" required>
+            </div>
+            <div class="form-group">
+                <label for="check_code" class="sr-only">验证码</label>
+                <div class="row">
+                    <div class="col-xs-7">
+                        <input type="text" class="form-control"
+                               name="code" id="check_code"
+                               placeholder="请输入验证码">
+                    </div>
+                    <div class="col-xs-5">
+                        <img id="check_code_img" src="/check_code.html">
+                    </div>
+                </div>
+            </div>
             <span style="color: red">{{ error_msg }}</span>
             <div class="checkbox">
                 <label>
@@ -24,7 +41,7 @@
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">
-                Sign in
+                登录
             </button>
         </form>
     </div> <!-- /container -->
