--- a/A_dbms/templates/dbms/article/article-add.html
+++ b/A_dbms/templates/dbms/article/article-add.html
@@ -6,10 +6,47 @@
     <div class="container">
         <h2>添加项目</h2>
         <form class="form-horizontal"
-              action="{% url 'dbms:article_add' usernum=request.user.num %}"
+              action="{% url 'dbms:article_add' %}"
               method="post"> {% csrf_token %}
             {#"form-inline":内联表单#}
             {#"form-horizontal":水平排列的表单#}
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            {{ form.custom_id.label_tag }}
+                            {{ form.custom_id }}
+                            {{ form.custom_id.errors }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            {{ form.custom_id.label_tag }}
+                            {{ form.custom_id }}
+                            {{ form.custom_id.errors }}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            {{ form.renewal.label_tag }}
+                            {{ form.renewal }}
+                            {{ form.renewal.errors }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            {{ form.renewal.label_tag }}
+                            {{ form.renewal }}
+                            {{ form.renewal.errors }}
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
             {% for field in form %}
                 <div class="form-group">
                     <div class="col-sm-10">
@@ -26,9 +63,8 @@
             {% endfor %}
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit"
-                            class="btn btn-default">提交
-                    </button>
+                    <input class="active btn btn-primary btn-sm"
+                           type="submit" value="提交">
                 </div>
             </div>
         </form>
