--- a/A_dbms/templates/dbms/article/article.html
+++ b/A_dbms/templates/dbms/article/article.html
@@ -5,25 +5,27 @@
 {% block right-content-container %}
     <div class="condition ">
         {% if kwargs.article_state == None %}
-            <a class="active btn btn-primary btn-sm" href="{% url 'dbms:article_all' usernum=request.user.num %}">全部</a>
+            <a class="active btn btn-primary btn-sm" href="{% url 'dbms:article_all' %}">全部</a>
         {% else %}
-            <a class="btn btn btn-primary btn-sm" href="{% url 'dbms:article_all' usernum=request.user.num %}">全部</a>
+            <a class="btn btn btn-primary btn-sm"
+               href="{% url 'dbms:article_all' %}">全部</a>
         {% endif %}
         {# 方式一：#}
         {% for item in article_state_list_dic %}
             {% if item.id == kwargs.article_state %}
                 <a class="active btn btn-primary btn-sm"
-                   href="{% url 'dbms:article' usernum=request.user.num article_state=item.id %}">
+                   href="{% url 'dbms:article' article_state=item.id %}">
                     {{ item.name }}
                 </a>
             {% else %}
-                <a class="btn btn-primary btn-sm" href="{% url 'dbms:article' usernum=request.user.num article_state=item.id %}">
+                <a class="btn btn-primary btn-sm"
+                   href="{% url 'dbms:article' article_state=item.id %}">
                     {{ item.name }}
                 </a>
             {% endif %}
         {% endfor %}
-        <a class="btn btn-info btn-sm"
-           href="{% url 'dbms:article_add' usernum=request.user.num %}">添加
+        <a class="btn btn-success btn-sm"
+           href="{% url 'dbms:article_add' %}">添加
         </a>
     </div>
     <div class="table-responsive">
@@ -36,7 +38,6 @@
             {#<caption><h4>项目管理</h4></caption>#}
             <thead>
             <tr style="text-align: center">
-                <th>序号</th>
                 <th>项目编号</th>
                 <th>客户</th>
                 <th>金额</th>
@@ -46,14 +47,16 @@
                 <th>风控专员</th>
                 <th>提交日期</th>
                 <th>项目状态</th>
-                <th>编辑</th>
             </tr>
             </thead>
             <tbody>
             {% for article in article_list %}
                 <tr>
-                    <td>{{ article.id }}</td>
-                    <td>{{ article.article_num }}</td>
+                    <td>
+                        <a href="{% url 'dbms:article_edit' id=article.id %}">
+                            {{  article.article_num }}
+                        </a>
+                    </td>
                     <td>{{ article.custom }}</td>
                     <td>{{ article.amount }}</td>
                     <td>{{ article.credit_term }}</td>
@@ -63,14 +66,6 @@
                     <td>{{ article.article_date }}</td>
                     {#方式一：推荐#}
                     <td>{{ article.get_article_state_display }}</td>
-                    <td>
-                        <a href="{% url 'dbms:article_edit' usernum=request.user.num id=article.id %}">
-                            编辑
-                        </a>|
-                        <a href="{% url 'dbms:article_del' usernum=request.user.num id=article.id %}">
-                            删除
-                        </a>
-                    </td>
                 </tr>
             {% endfor %}
             </tbody>
