--- a/A_dbms/templates/dbms/appraisal/appraisal-edit.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-edit.html
@@ -1,60 +1,66 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>上会</title>
-    <link rel="stylesheet" href="{% static 'dbms/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'dbms/css/style.css' %}">
-    <script src="{% static 'dbms/js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static 'dbms/js/bootstrap.min.js' %}"></script>
-</head>
-<body>
-<div class="container">
-    {#项目情况#}
-    <form class="form-horizontal" method="post"
-          novalidate enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for field in forma %}
-            <div class="form-group">
-                <div class="col-sm-10">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors.0 }}
-                    {% if field.help_text %}
-                        <div class="help">
-                            {{ field.help_text|safe }}
-                        </div>
-                    {% endif %}
+{% extends 'dbms/index.html' %}
+{% block title %}编辑项目{% endblock %}
+
+{% block right-content-container %}
+    <div class="container">
+        <h2>编辑项目</h2>
+        <a class="active btn btn-danger btn-sm"
+           href="{% url 'dbms:article_del' id=id %}">
+            删除
+        </a>
+        <form class="form-horizontal"
+              action="{% url 'dbms:article_edit' id=id %}"
+              method="post" novalidate
+              enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        {{ form.custom_id.label_tag }}
+                        {{ form.custom_id }}
+                        {{ form.custom_id.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.director_id.label_tag }}
+                        {{ form.director_id }}
+                        {{ form.director_id.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.assistant_id.label_tag }}
+                        {{ form.assistant_id }}
+                        {{ form.assistant_id.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.control_id.label_tag }}
+                        {{ form.control_id }}
+                        {{ form.control_id.errors }}
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        {{ form.renewal.label_tag }}
+                        {{ form.renewal }}
+                        {{ form.renewal.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.augment.label_tag }}
+                        {{ form.augment }}
+                        {{ form.augment.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.credit_term.label_tag }}
+                        {{ form.credit_term }}
+                        {{ form.credit_term.errors }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.article_date.label_tag }}
+                        {{ form.article_date }}
+                        {{ form.article_date.errors }}
+                    </div>
                 </div>
             </div>
-        {% endfor %}
-    </form>
-    {#上会信息#}
-    <form class="form-horizontal"
-          action="{% url 'dbms:appraisal_edit' id %}"
-          method="post" novalidate enctype="multipart/form-data">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                <div class="col-sm-10">
-                    {{ field.label_tag }}
-                    {{ field }}
-                    {{ field.errors.0 }}
-                    {% if field.help_text %}
-                        <div class="help">
-                            {{ field.help_text|safe }}
-                        </div>
-                    {% endif %}
-                </div>
-            </div>
-        {% endfor %}
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <input type="submit" class="btn btn-primary" value="提交"/>
-            </div>
-        </div>
-    </form>
-</div>
-</body>
-</html>
+            <input class="active btn btn-primary btn-sm"
+                   type="submit" value="提交">
+        </form>
+    </div>
+{% endblock %}
