--- a/A_dbms/templates/dbms/index.html
+++ b/A_dbms/templates/dbms/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </div>
             <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main"
-                 style="padding-left: 1px;padding-right: 1px;">
+                 style="padding: 1px;">
                 {% block right-content-container %}
                     <h2 class="page-header">{{ request.user.name }}的个人首页</h2>
                 {% endblock %}
