--- a/A_dbms/templates/dbms/appraisal/appraisal-edit.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-edit.html
@@ -1,4 +1,4 @@
-{% extends 'dbms/index.html' %}
+{% extends 'dbms/index_dbms.html' %}
 {% block title %}编辑项目{% endblock %}
 
 {% block right-content-container %}
