--- a/A_dbms/templates/dbms/article/article-edit.html
+++ b/A_dbms/templates/dbms/article/article-edit.html
@@ -1,127 +1,10 @@
-{% extends 'dbms/index.html' %}
+{% extends 'dbms/index_dbms.html' %}
 {% block title %}编辑项目{% endblock %}
 
 {% block right-content-container %}
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <label>项目情况</label>
-            <a class="active btn btn-danger btn-sm"
-               style="float: right"
-               href="{% url 'dbms:article_del' id=id %}">
-                删除
-            </a>
-        </div>
-        <div class="panel-body" style="padding: 1px;">
-            <div class="table-responsive">
-                {#"table-responsive":表格响应式布局#}
-                <table class="table table-bordered table-hover
-                table-condensed active">
-                    {#"table-bordered":表格表格边框#}
-                    {#"table-hover":表格悬停变色#}
-                    {#"table-condensed":表格紧缩#}
-                    {#<caption><h4>项目管理</h4></caption>#}
-                    <thead>
-                    <tr style="text-align: center">
-                        <th>项目编号</th>
-                        <th>客户</th>
-                        <th>金额</th>
-                        <th>期限</th>
-                        <th>项目经理</th>
-                        <th>项目助理</th>
-                        <th>风控专员</th>
-                        <th>提交日期</th>
-                        <th>项目状态</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>{{ article_obj.article_num }}</td>
-                        <td>{{ article_obj.custom }}</td>
-                        <td>{{ article_obj.amount }}</td>
-                        <td>{{ article_obj.credit_term }}</td>
-                        <td>{{ article_obj.director.name }}</td>
-                        <td>{{ article_obj.assistant.name }}</td>
-                        <td>{{ article_obj.control.name }}</td>
-                        <td>{{ article_obj.article_date }}</td>
-                        {#方式一：推荐#}
-                        <td>{{ article_obj.get_article_state_display }}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
 
-        </div>
-    </div>
-    <div>
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs"
-            role="tablist"
-            style="background-color: #f5f5f5">
-            <li role="presentation"
-                class="active">
-                <a href="#home"
-                   style="background-color: #f5f5f5"
-                   aria-controls="home"
-                   role="tab"
-                   data-toggle="tab">
-                    委托合同
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="#profile"
-                   style="background-color: #f5f5f5"
-                   aria-controls="profile"
-                   role="tab"
-                   data-toggle="tab">
-                    保后
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="#messages"
-                   style="background-color: #f5f5f5"
-                   aria-controls="messages"
-                   role="tab"
-                   data-toggle="tab">
-                    评审
-                </a>
-            </li>
-            <li role="presentation">
-                <a href="#settings"
-                   style="background-color: #f5f5f5"
-                   aria-controls="settings"
-                   role="tab"
-                   data-toggle="tab">
-                    变更
-                </a>
-            </li>
-        </ul>
+    {% include 'dbms/article/scan/panel.html' %}
 
-        <!-- Tab panes -->
-        <div class="tab-content">
-            <div role="tabpanel"
-                 class="tab-pane active"
-                 id="home">
-                这是第一个页面
-            </div>
-            <div role="tabpanel"
-                 class="tab-pane"
-                 id="profile">
-                这是二个页面？
-            </div>
-            <div role="tabpanel"
-                 class="tab-pane"
-                 id="messages">
-                这是三个页面？
-            </div>
-            <div role="tabpanel"
-                 class="tab-pane"
-                 id="settings">
-                这是四个页面？
-                {{ request.session.menus }}
-                {{ request.COOKIES.sessionid }}
-            </div>
-        </div>
-    </div>
-    </div>
+    {% include 'dbms/article/scan/nav_tabs.html' %}
 
 {% endblock %}
