--- a/A_dbms/templates/dbms/article/article.html
+++ b/A_dbms/templates/dbms/article/article.html
@@ -1,73 +1,11 @@
-{% extends 'dbms/index.html' %}
-{% load static %}
+{% extends 'dbms/index_dbms.html' %}
+
 {% block title %}项目管理{% endblock %}
 
+
 {% block right-content-container %}
-    {% if kwargs.article_state == None %}
-        <a class="active btn btn-primary btn-sm"
-           href="{% url 'dbms:article_all' %}">全部</a>
-    {% else %}
-        <a class="btn btn btn-primary btn-sm"
-           href="{% url 'dbms:article_all' %}">全部</a>
-    {% endif %}
-    {# 方式一：#}
-    {% for item in article_state_list_dic %}
-        {% if item.id == kwargs.article_state %}
-            <a class="active btn btn-primary btn-sm"
-               href="{% url 'dbms:article' article_state=item.id %}">
-                {{ item.name }}
-            </a>
-        {% else %}
-            <a class="btn btn-primary btn-sm"
-               href="{% url 'dbms:article' article_state=item.id %}">
-                {{ item.name }}
-            </a>
-        {% endif %}
-    {% endfor %}
-    <a class="btn btn-success btn-sm"
-       href="{% url 'dbms:article_add' %}">添加
-    </a>
-    <div class="table-responsive">
-        {#"table-responsive":表格响应式布局#}
-        <table class="table table-bordered table-hover
-                table-condensed active">
-            {#"table-bordered":表格表格边框#}
-            {#"table-hover":表格悬停变色#}
-            {#"table-condensed":表格紧缩#}
-            {#<caption><h4>项目管理</h4></caption>#}
-            <thead>
-            <tr style="text-align: center">
-                <th>项目编号</th>
-                <th>客户</th>
-                <th>金额</th>
-                <th>期限</th>
-                <th>项目经理</th>
-                <th>项目助理</th>
-                <th>风控专员</th>
-                <th>提交日期</th>
-                <th>项目状态</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for article in article_list %}
-                <tr>
-                    <td>
-                        <a href="{% url 'dbms:article_edit' id=article.id %}">
-                            {{ article.article_num }}
-                        </a>
-                    </td>
-                    <td>{{ article.custom }}</td>
-                    <td>{{ article.amount }}</td>
-                    <td>{{ article.credit_term }}</td>
-                    <td>{{ article.director.name }}</td>
-                    <td>{{ article.assistant.name }}</td>
-                    <td>{{ article.control.name }}</td>
-                    <td>{{ article.article_date }}</td>
-                    {#方式一：推荐#}
-                    <td>{{ article.get_article_state_display }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    <div>
+        {% include 'dbms/article/saixuan.html' %}
+        {% include 'dbms/article/table_content.html' %}
     </div>
 {% endblock %}
