--- a/A_dbms/templates/dbms/article/scan/panel.html
+++ b/A_dbms/templates/dbms/article/scan/panel.html
@@ -35,7 +35,7 @@
             风控专员：{{ article_obj.control.name }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            期限：{{ article_obj.credit_term }}个月
+            担保期限：{{ article_obj.credit_term }}个月
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             提交日期：{{ article_obj.article_date }}
