--- a/A_dbms/templates/dbms/article/scan/tab/n-t-present.html
+++ b/A_dbms/templates/dbms/article/scan/tab/n-t-present.html
@@ -17,7 +17,7 @@
            aria-controls="profile"
            role="tab"
            data-toggle="tab">
-            审查意见
+            评审会
         </a>
     </li>
     <li role="presentation">
