--- a/A_dbms/templates/dbms/article/scan/tab/content/tab-review.html
+++ b/A_dbms/templates/dbms/article/scan/tab/content/tab-review.html
@@ -8,23 +8,25 @@
         {#<caption><h4>项目管理</h4></caption>#}
         <thead>
         <tr style="text-align: center">
-            <th>合同编号</th>
-            <th>银行名称</th>
-            <th>合同种类</th>
-            <th>金额</th>
-            <th>合同状态</th>
-            <th>放款余额</th>
+            <th>评审编号</th>
+            <th>评审类型</th>
+            <th>评审次序</th>
+            <th>评审日期</th>
+            <th>评审委员</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            {% for agree in article_obj.agree_article.all %}
-                <td>{{ agree.agree_num }}</td>
-                <td>{{ agree.branch }}</td>
-                <td>{{ agree.get_agree_typ_display }}</td>
-                <td>{{ agree.agree_amount }}</td>
-                <td>{{ agree.get_agree_state_display }}</td>
-                <td>{{ agree.agree_balance }}</td>
+            {% for appraisal in article_obj.appraisal_article.all %}
+                <td>{{ appraisal.num }}</td>
+                <td>{{ appraisal.get_review_model_display }}</td>
+                <td>{{ appraisal.review_order }}</td>
+                <td>{{ appraisal.review_date }}</td>
+                <td>
+                    {% for expert in article_obj.expert.all %}
+                        {{ expert }}|
+                    {% endfor %}
+                </td>
             {% endfor %}
         </tr>
         </tbody>
