--- a/A_dbms/templates/dbms/appraisal/appraisal.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal.html
@@ -24,7 +24,7 @@
                 {% for appraisal in appraisal_list %}
                     <tr>
                         <td>
-                            <a href="{% url 'dbms:appraisal_edit' id=appraisal.id %}">
+                            <a href="{% url 'dbms:meeting_edit' id=appraisal.id %}">
                                 {{ appraisal.num }}
                             </a>
                         </td>
