--- a/A_dbms/templates/dbms/article/article-agree.html
+++ b/A_dbms/templates/dbms/article/article-agree.html
@@ -9,7 +9,7 @@
 
         {% include 'dbms/article/scan/nav_tabs.html' %}
 
-{#        {% include 'dbms/article/scan/nav_detail.html' %}#}
+        {% include 'dbms/article/agree/nav_detail.html' %}
 
     </div>
 
