--- a/A_dbms/templates/dbms/article/article.html
+++ b/A_dbms/templates/dbms/article/article.html
@@ -4,8 +4,12 @@
 
 
 {% block right-content-container %}
-    <div>
-        {% include 'dbms/article/saixuan.html' %}
-        {% include 'dbms/article/table_content.html' %}
-    </div>
+{#    <div class="container-fluid" style="padding-left: 1px;">#}
+{#        <div class="panel panel-default">#}
+{#            <div class="panel-body row">#}
+                {% include 'dbms/article/saixuan.html' %}
+                {% include 'dbms/article/table_content.html' %}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 {% endblock %}
