--- a/A_dbms/templates/dbms/article/scan/panel.html
+++ b/A_dbms/templates/dbms/article/scan/panel.html
@@ -1,11 +1,18 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <label>项目情况</label>
-        <a class="btn btn-danger btn-sm navbar-right"
-           href="{% url 'dbms:article_del' id=id %}">
-            删除
-        </a>
+        <label class="navbar-right">
+            <a class="btn btn-danger btn-sm"
+               href="{% url 'dbms:article_edit' article_id=article_obj.id %}">
+                修改
+            </a>
+            <a class="btn btn-danger btn-sm "
+               href="{% url 'dbms:article_del' article_id=article_obj.id %}">
+                删除
+            </a>
+        </label>
     </div>
+
     <div class="panel-body row" style="padding: 1px;">
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             客户名称：{{ article_obj.custom }}
