--- a/A_dbms/templates/dbms/article/scan/tab/content/tab-commission.html
+++ b/A_dbms/templates/dbms/article/scan/tab/content/tab-commission.html
@@ -13,20 +13,37 @@
             <th>合同种类</th>
             <th>金额</th>
             <th>合同状态</th>
+            <th>应收保费</th>
             <th>放款余额</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            {% for agree in article_obj.agree_article.all %}
-                <td>{{ agree.agree_num }}</td>
+        {% for agree in article_obj.agree_article.all %}
+            <tr>
+                {% if agree_id %}
+                    {% if agree_id == agree.id %}
+                        <td><a class="active"
+                               href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
+                            {{ agree.agree_num }}*
+                        </a></td>
+                    {% else %}
+                        <td><a href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
+                            {{ agree.agree_num }}
+                        </a></td>
+                    {% endif %}
+                {% else %}
+                    <td><a href="{% url 'dbms:article_scan_agree' article_id=article_obj.id agree_id=agree.id %}">
+                        {{ agree.agree_num }}
+                    </a></td>
+                {% endif %}
                 <td>{{ agree.branch }}</td>
                 <td>{{ agree.get_agree_typ_display }}</td>
                 <td>{{ agree.agree_amount }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
+                <td>{{ agree.charge }}</td>
                 <td>{{ agree.agree_balance }}</td>
-            {% endfor %}
-        </tr>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
