--- a/A_dbms/templates/dbms/article/article-edit.html
+++ b/A_dbms/templates/dbms/article/article-edit.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 {% load static %}
-{% block title %}添加项目{% endblock %}
+{% block title %}修改项目{% endblock %}
 
 {% block right-content-container %}
     <div class="container">
