--- a/A_dbms/templates/dbms/meeting/meeting-scan.html
+++ b/A_dbms/templates/dbms/meeting/meeting-scan.html
@@ -5,9 +5,9 @@
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/article/scan/panel.html' %}
+        {% include 'dbms/meeting/scan/panel.html' %}
 
-        {% include 'dbms/article/scan/nav_tabs.html' %}
+        {% include 'dbms/meeting/scan/nav_tabs.html' %}
 
     </div>
 
