--- a/A_dbms/templates/dbms/meeting/article/detail/present.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/present.html
@@ -1,21 +1,20 @@
 <ul class="nav nav-tabs"
     role="tablist"
     style="background-color: #f5f5f5">
-
-    <li role="presentation">
-        <a href="#review"
+    <li role="presentation" class="active">
+        <a href="#expert"
            style="background-color: #f5f5f5"
            aria-controls="profile"
            role="tab"
            data-toggle="tab">
-            评审会
+            评审委员
         </a>
     </li>
 
     <li role="presentation">
         <a href="#comment"
            style="background-color: #f5f5f5"
-           aria-controls="messages"
+           aria-controls="profile"
            role="tab"
            data-toggle="tab">
             评委意见
@@ -25,21 +24,10 @@
     <li role="presentation">
         <a href="#single"
            style="background-color: #f5f5f5"
-           aria-controls="settings"
+           aria-controls="messages"
            role="tab"
            data-toggle="tab">
             单项额度
-        </a>
-    </li>
-
-    <li role="presentation"
-        class="active">
-        <a href="#commission"
-           style="background-color: #f5f5f5"
-           aria-controls="home"
-           role="tab"
-           data-toggle="tab">
-            委托合同
         </a>
     </li>
 </ul>
