--- a/A_dbms/templates/dbms/meeting/scan/tab/content/experts.html
+++ b/A_dbms/templates/dbms/meeting/scan/tab/content/experts.html
@@ -17,7 +17,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for expert in meeting_obj.expert.all %}
+        {% for expert in expert_list %}
             <tr>
                 <td>{{ expert.name }}</td>
                 <td>{{ expert.organization }}</td>
