--- a/A_dbms/templates/dbms/article/scan/tab/present.html
+++ b/A_dbms/templates/dbms/article/scan/tab/present.html
@@ -2,53 +2,44 @@
     role="tablist"
     style="background-color: #f5f5f5">
 
-    <li role="presentation" class="active">
-        <a href="#counter"
+    <li role="presentation">
+        <a href="#meeting"
            style="background-color: #f5f5f5"
            aria-controls="profile"
            role="tab"
            data-toggle="tab">
-            反担保
+            评审会
         </a>
     </li>
 
     <li role="presentation">
-        <a href="#charge"
+        <a href="#comment"
            style="background-color: #f5f5f5"
            aria-controls="messages"
            role="tab"
            data-toggle="tab">
-            收费
+            评委意见
         </a>
     </li>
 
     <li role="presentation">
-        <a href="#provide"
-           style="background-color: #f5f5f5"
-           aria-controls="messages"
-           role="tab"
-           data-toggle="tab">
-            放款
-        </a>
-    </li>
-
-    <li role="presentation">
-        <a href="#repayment"
+        <a href="#single"
            style="background-color: #f5f5f5"
            aria-controls="settings"
            role="tab"
            data-toggle="tab">
-            回款
+            单项额度
         </a>
     </li>
 
-    <li role="presentation">
-        <a href="#compensatory "
+    <li role="presentation"
+        class="active">
+        <a href="#agree"
            style="background-color: #f5f5f5"
            aria-controls="home"
            role="tab"
            data-toggle="tab">
-            代偿
+            委托合同
         </a>
     </li>
 </ul>
