--- a/A_dbms/templates/dbms/meeting/meeting-scan.html
+++ b/A_dbms/templates/dbms/meeting/meeting-scan.html
@@ -5,7 +5,7 @@
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/meeting/scan/panel.html' %}
+        {% include 'dbms/meeting/scan/summry.html' %}
 
         {% include 'dbms/meeting/scan/nav_tabs.html' %}
 
