--- a/A_dbms/templates/dbms/meeting/scan/tab/present.html
+++ b/A_dbms/templates/dbms/meeting/scan/tab/present.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-tabs"
     role="tablist"
     style="background-color: #f5f5f5">
-    <li role="presentation"  class="active">
+    <li role="presentation" class="active">
         <a href="#articles"
            style="background-color: #f5f5f5"
            aria-controls="messages"
@@ -11,12 +11,12 @@
         </a>
     </li>
     <li role="presentation">
-        <a href="#experts"
+        <a href="#expert"
            style="background-color: #f5f5f5"
-           aria-controls="profile"
+           aria-controls="messages"
            role="tab"
            data-toggle="tab">
-            参会评审
+            评审委员
         </a>
     </li>
 </ul>
