--- a/A_dbms/templates/dbms/article/article/table.html
+++ b/A_dbms/templates/dbms/article/article/table.html
@@ -40,4 +40,21 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <div class="pagination">
+        <span class="step-links">
+            {% if article_list.has_previous %}
+                <a href="?page={{ article_list.previous_page_number }}">previous</a>
+            {% endif %}
+            <span class="current">
+                page{{ article_list.number }} of {{ article_list.paginator.num_pages }}.
+            </span>
+
+            {% if article_list.has_next %}
+                <a href="?page={{ article_list.next_page_number }}">next</a>
+            {% endif %}
+        </span>
+    </div>
+
+
 </div>
