--- a/A_dbms/templates/dbms/article/article/table.html
+++ b/A_dbms/templates/dbms/article/article/table.html
@@ -44,14 +44,14 @@
     <div class="pagination">
         <span class="step-links">
             {% if article_list.has_previous %}
-                <a href="?page={{ article_list.previous_page_number }}">previous</a>
+                <a href="?page={{ article_list.previous_page_number }}">上一页</a>
             {% endif %}
             <span class="current">
-                page{{ article_list.number }} of {{ article_list.paginator.num_pages }}.
+                第{{ article_list.number }} 页/共 {{ article_list.paginator.num_pages }}页
             </span>
 
             {% if article_list.has_next %}
-                <a href="?page={{ article_list.next_page_number }}">next</a>
+                <a href="?page={{ article_list.next_page_number }}">下一页</a>
             {% endif %}
         </span>
     </div>
